# karukan

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: karukan-engine-ci.yml  karukan-im-ci.yml
docs/: user-dictionary.md
karukan-cli/: Cargo.toml  README.md
karukan-cli/static/: app.js  index.html  styles.css
karukan-engine/: .gitignore  Cargo.toml  README.md  models.toml
karukan-engine/benches/: inference_bench.rs
karukan-engine/src/: dict.rs  kana.rs  learning.rs  lib.rs
karukan-engine/src/kanji/: backend.rs  error.rs  hf_download.rs  llamacpp.rs  mod.rs  model_config.rs
karukan-engine/src/romaji/: converter.rs  mod.rs  rules.rs  trie.rs
karukan-engine/tests/: kanji_conversion_tests.rs  romaji_tests.rs
karukan-im/: Cargo.toml  README.md  install-local.sh
karukan-im/config/: default.toml  default_user_dict.txt
karukan-im/fcitx5-addon/: .clang-format  .clang-tidy  CMakeLists.txt  karukan-addon.conf.in  karukan.conf  org.fcitx.Fcitx5.Addon.Karukan.metainfo.xml.in
karukan-im/fcitx5-addon/src/: karukan.cpp  karukan.h
karukan-im/include/: karukan.h
karukan-im/src/: lib.rs
karukan-im/src/config/: mod.rs  settings.rs
karukan-im/src/core/: candidate.rs  keycode.rs  mod.rs  preedit.rs  state.rs
karukan-im/src/core/engine/: conversion.rs  cursor.rs  display.rs  init.rs  input.rs  input_buffer.rs  mod.rs  mode.rs  strategy.rs  types.rs
karukan-im/src/core/engine/tests/: alphabet.rs  basic.rs  candidates.rs  conversion.rs  cursor.rs  katakana.rs  live_conversion.rs  mod.rs  mode_toggle.rs  passthrough.rs  strategy.rs  surrounding.rs
karukan-im/src/ffi/: input.rs  lifecycle.rs  mod.rs  query.rs  tests.rs
