[workspace]
members = ["karukan-engine", "karukan-cli", "karukan-im"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/togatoga/karukan"
homepage = "https://github.com/togatoga/karukan"

[workspace.dependencies]
# Shared across all 3 crates
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared across 2 crates
serde_json = "1"
toml = "0.8"
thiserror = "2"

# Internal crate
karukan-engine = { path = "karukan-engine" }

# Dev dependencies shared
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
